src/test/ui/parser/issue-2354.stderr
error: this file contains an un-closed delimiter
  --> $DIR/issue-2354.rs:15:66
   |
LL | fn foo() {
   |          - un-closed delimiter
LL |   match Some(10) {
   |                  - this delimiter might not be properly closed...
...
LL | }
   | - ...as it matches this but it has different indentation
...
LL |
   |                                                                  ^

error[E0601]: `main` function not found in crate `issue_2354`
   |
   = note: the main function must be defined at the crate level but you have one or more functions named 'main' that are not defined at the crate level. Either move the definition or attach the `#[main]` attribute to override this behavior.
note: here is a function named 'main'
  --> $DIR/issue-2354.rs:14:1
   |
LL | fn main() {}
   | ^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0601`.
